Seperate out the video_queue api and add delete.
